# srml

./: .gitignore  CMakeLists.txt  ast.cc  ast.hh  n_term.hh  numlex.cc  numlex.l  psdnf.hh  save_set.hh  tokens.hh
include/: n_term.hh  psdnf.hh  save_set.hh
src/: main.cc  n_term.cc  psdnf.cc  save_set.cc
